Version 4.0.12 (2013-11-xx)
	Added new media_scripts option to the media plugin. This makes it possible to embed videos using script elements.
	Fixed bug where div block formats in inline mode where applied to all paragraphs within the editor.
	Fixed bug where div blocks where marked as an active format in inline mode when doing non collapsed selections.
	Fixed bug where the importcss plugin wouldn't append styles if the style_formats option was configured.
	Fixed bug where the importcss plugin would import styles into groups multiple times for different format menus.
	Fixed bug where the paste plugin wouldn't properly remove the paste bin element on IE if a tried to paste a file.
	Fixed bug where selection normalization wouldn't properly handle cases where a range point was after a element node.
Version 4.0.11 (2013-11-20)
	Added the possibility to update button icon after it's been rendered.
	Added new autosave_prefix option allows you to set the prefix for the local storage keys.
	Added new pagebreak_split_block option to make it easier to split block elements with a page break.
	Fixed bug where IE would some times produce font elements when typing out side the body root blocks.
	Fixed bug where IE wouldn't properly use the configured root block element but instead use the a paragraph.
	Fixed bug where IE would throw a stack overflow if control selections non images was made in inline mode.
	Fixed bug where IE 8 would render an extra enter element if the contents of the editor was empty.
	Fixed bug where the caret wasn't moved to the first suitable element when updating the source.
	Fixed bug where protocol relative urls would be forced into http protocol.
	Fixed bug where internal images with data urls such as video elements would be removed by the paste_data_images option.
	Fixed bug where the autoresize plugin wouldn't properly resize the editor to initial contents some times.
	Fixed bug where the templates dialog wouldn't be properly rendered on IE 7.